# confirmation-bias-analysis

./: .gitignore  README.md  pyproject.toml
data/interim/: 5_mmlu_pro_gemma3_results.jsonl
data/interim/3_fever/deepseek_r1_1.5b/: 3_fever_deepseek_r1_1.5b_gpt.csv  (+3 more)
data/processed/: 5_mmlu_pro_cb_overall_analysis.csv  llm_aggregated_metrics_report.md
data/raw/: 5_mmlu_pro_500.jsonl
ignored/: Calcolo_tokens_dataset_5.ipynb  Prova_deepseek.ipynb  Sanity_check_dataset_5_sas_evaluation.ipynb
notebooks/: 01_generation.ipynb  02_evaluation_gpt.ipynb  02_evaluation_nli.ipynb  02_evaluation_sas.ipynb  03_final_analysis.ipynb
old/: Prova_dataset_1.ipynb  Prova_dataset_2.ipynb  Prova_dataset_3.ipynb  Prova_dataset_3_gpt_evaluation.ipynb  Prova_dataset_3_nli_evaluation.ipynb  Prova_dataset_3_sas_evaluation.ipynb  Prova_dataset_4.ipynb  Prova_dataset_4_correlazione_domanda.ipynb  Prova_dataset_4_gpt_evaluation.ipynb  Prova_dataset_4_nli_evaluation.ipynb  Prova_dataset_4_sas_evaluation.ipynb  Prova_dataset_5.ipynb  Prova_dataset_5_final_evaluation.ipynb  Prova_dataset_5_gpt_evaluation.ipynb  Prova_dataset_5_nli_evaluation.ipynb  Prova_dataset_5_sas_evaluation.ipynb
old_data/: 5_mmlu_deepseek_v3_0324_cb_gpt.csv  5_mmlu_deepseek_v3_0324_cb_nli.csv  5_mmlu_deepseek_v3_0324_cb_sas.csv  5_mmlu_deepseek_v3_0324_results.jsonl  5_mmlu_gpt_4o_cb_gpt.csv  5_mmlu_gpt_4o_cb_nli.csv  5_mmlu_gpt_4o_cb_sas.csv  5_mmlu_gpt_4o_results.jsonl
src/: config.py  data_loader.py  final_analysis_utils.py  llm_client.py  utils.py
src/evaluators/: gpt_judge.py  nli.py  sas.py
(+89 files in other folders)
