[project]
name = "confirmation-bias-analysis"
version = "1.0.0"
description = "A framework for identifying and evaluating confirmation bias in Large Language Models using multiple datasets and metrics."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.14.0",
    "datasets>=2.14.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "google-generativeai>=0.4.0"
]
